--- a/mw-plugin/pom.xml
+++ b/mw-plugin/pom.xml
@@ -22,7 +22,7 @@
     </properties>
     <name>MW Plugin</name>
     <description>MW Jenkins Plugin</description>
-    <url>https://wiki.jenkins-ci.org/display/JENKINS/TODO+Plugin</url>
+    <url>http://www.django-rest-framework.org/api-guide/authentication/</url>
     <!-- The default licence for Jenkins OSS Plugins is MIT. Substitute for the applicable one if needed. -->
     <licenses>
         <license>
