--- a/simple-java-maven-app/jenkins/Jenkinsfile
+++ b/simple-java-maven-app/jenkins/Jenkinsfile
@@ -8,7 +8,11 @@ pipeline {
     stages {
         stage('Build') {
             steps {
+		sh "pwd"
+		sh "ls -l"
                 sh "cd .."
+		sh "pwd"
+		sh "ls -l"
                 sh 'mvn -B -DskipTests clean package'
             }
         }
