--- a/simple-java-maven-app/jenkins/Jenkinsfile
+++ b/simple-java-maven-app/jenkins/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
             steps {
 		sh "pwd"
 		sh "ls -l"
-                sh "cd .."
+                sh "cd simple-java-maven-app"
 		sh "pwd"
 		sh "ls -l"
                 sh 'mvn -B -DskipTests clean package'
